Continued with the add context script
* Created function that retrives entites of a string given as input

* Created file with entities to remove

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
-clyngor
+clyngor~=0.4.1
 Cython==0.29.24
 numpy==1.19.2
 scikit_learn==1.0.1
-scipy
+scipy~=1.5.3
 sympy==1.9
 tqdm==4.52.0
 transformers==4.6.0
-torch
+torch~=1.11.0
+
+pytest~=7.1.1
+setuptools~=57.0.0
+PySDD~=0.2.10
+clingo~=5.5.0.post3
+ply~=3.11
+SPARQLWrapper~=2.0.0
+scikit-learn~=1.0.1
