--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ ply~=3.11
 SPARQLWrapper~=2.0.0
 scikit-learn~=1.0.1
 requests~=2.27.1
+spacy~=3.3.0
+wordninja~=2.0.0
+gensim~=4.2.0
+nltk~=3.7
+gspread~=5.4.0
